# qa_framework

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  index.html  install.py  main.py  pyproject.toml  tests.yml
.github/workflows/: tests.yml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: severity.json  status-chart.json  summary.json
data/: behaviors.csv  behaviors.json  factories.py  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 271974b3fbf65437.txt  2c4795db95f19ae9.txt  4a9f8b019503bf4f.txt  9d97001b6449f3ff.txt  adfdbaab1f633508.txt  b1d361361be2e212.txt  cf7aaf149100ab4.txt  e9579673e4d44fa8.txt  fc27d459e862f719.txt
data/test-cases/: 1d4fdeeb15bab65a.json  26777547664b6288.json  6160cd89676568b.json  8791a653ba57e1ee.json  a7fdbb5fb9ee2458.json  a9eadee3d79f2d16.json  aeb98caf3c083a76.json  (+9 more)
docs/: installation_guide_windows.html  quick_installation_guide.html
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pages/: todo_page.py
performance/: jsonplaceholder.py  locustfile.py  rahulshetty.py
pom/: grocery_page.py  todo_page.py
scripts/: delete_reports.py  setup-linux.sh  setup-windows.ps1  setup.py
smoke/: index.html
tests/: conftest.py
utils/: api_client.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
(+307 files in other folders)
